syntax = "proto3";

message PbChat {
    repeated Message pack = 1;
    PbUser user = 2;
    message Message {
        string timeId = 1;
        oneof body {
            string text = 2;
            File file = 3;
            Image img = 4;
        }
    }
    message File {
        string id = 1;
        string name = 2;
        string type = 3;
        uint64 size = 4;
        uint64 modified = 5;
        optional bool download = 6; // 是否下载消息（下载他人发送的文件时生成的下载消息）
        optional DownloadState state = 7;
    }
    message Image {
        File file = 1;
        uint32 width = 2;
        uint32 height = 3;
    }
    enum DownloadState {
        NotDownloadable = 0;
        Downloadable = 1;
        Downloading = 2;
        Downloaded = 3;
    }
}

message PbUser {
    string id = 1;
    string nick = 2;
}

message PbTransporter {
    string msgId = 1;
    string loadId = 2;
    oneof container {
        // request
        bool startOrEnd = 3;
        uint32 ack = 4;
        Resend resend = 5;
        // response
        Meta meta = 6;
        Code code = 7;
        Payload load = 8;
    }
    message Resend {
        uint32 index = 1;
        uint32 count = 2;
    }
    message Meta {
        uint64 size = 1;
    }
    enum Code {
        NonExistentLoad = 0;
        FailedToReadFile = 1;
    }
    message Payload {
        uint32 index = 2;
        bytes body = 3;
    }
}
